--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(compC__)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(compC__ main.cpp defs.h Scanner.h Scanner.cpp Diagram.cpp Diagram.h Tree.cpp Tree.h defs.cpp)
+add_executable(compC__ main.cpp defs.h Scanner.h Scanner.cpp Diagram.cpp Diagram.h Tree.cpp Tree.h defs.cpp LL1.cpp LL1.h)
